<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">摇星球</string>
    <string name="bybike">摇星球</string>
    <string name="findbike">找摇摇车</string>
    <string name="current_address">北京市海淀区海淀北二街8号中关村SOHO</string>
    <string name="beijing">北京</string>
    <string name="foot">步行</string>
    <string name="distance">距离</string>
    <string name="each_hour">每小时</string>
    <string name="book">确定预约</string>
    <string name="end_book">预约结束</string>
    <string name="unlock">输码解锁</string>
    <string name="unlock_auto">自动解锁</string>
    <string name="bike_code">车辆编码</string>
    <string name="book_countdown">保留倒计时</string>
    <string name="bike_sound">立即解锁</string>
    <string name="cancel_book">取消预约</string>
    <string name="cancel_book_toast">超过预约时间，系统已自动结束</string>
    <string name="code_unlock">输码解锁</string>
    <string name="code_manual">手动输码</string>
    <string name="code_prompt">在车锁和车头位置，已有车辆编码</string>
    <string name="code_unvalid">无效的编号，请重新扫描或输码！</string>
    <string name="code_null">请输入设备编号！</string>
    <string name="unlock_im">立即解锁</string>
    <string name="wallet">我的钱包</string>
    <string name="coupon">优惠券</string>
    <string name="route">使用记录</string>
    <string name="invite_friend">邀请好友</string>
    <string name="guide">使用指南</string>
    <string name="setting">设置</string>
    <string name="account_ballance" formatted="false">账户余额&#160;%.2f&#160;元  %s</string>
    <string name="account_withdraw">&#160;&#160;&#160;&#160;提现</string>
    <string name="transaction_type">请选择交易类型</string>
    <string name="ballance_no">账户余额不足，现在前往充值</string>
    <string name="charge_im">马上充值</string>
    <string name="routing">使用中</string>
    <string name="price">1元</string>
    <string name="route_detail">使用详情</string>
    <string name="my_route">我的行程</string>
    <string name="no_route">您还没有使用</string>
    <string name="net_wifi">现已链接到Wi-Fi网络</string>
    <string name="net_mobile">现已连接到移动网络</string>
    <string name="net_none">网络连接失败，请检查网络连接！</string>
    <string name="bike_time">使用时长</string>
    <string name="bike_distance">车辆编号</string>
    <string name="bike_price">花费</string>
    <string name="routing_prompt">使用时间结束后，自动结束计费~</string>
    <string name="book_prompt">预约车辆在您靠近时，点击解锁~</string>
    <string name="bike_exception_prompt">如果你发现车子有异常，点击取消</string>
    <string name="end">结束</string>
    <string name="end_route">结束\n使用</string>
    <string name="open_gps">请先打开GPS，提高定位准确度</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_continu">坚持使用</string>
    <string name="cancel_change">更换设备</string>
    <string name="navigation">导航</string>
    <string name="begin_navigation">开始导航</string>
    <string name="my_position">我的位置</string>
    <string name="input_start_place">输入起点</string>
    <string name="input_destination">输入终点</string>
    <string name="please_input_start_place">请输入起点</string>
    <string name="please_input_destination">请输入终点</string>
    <string name="inner_navi">内置导航</string>
    <string name="baidu_navi">百度地图</string>
    <string name="gaode_navi">高德地图</string>
    <string name="map_loaction_icon">定位icon</string>
    <string name="map_default_icon">默认图标</string>
    <string name="map_div_icon">自定义图标</string>
    <string name="map_line_paint">请点击选择所需路线，在地图中绘制</string>
    <string name="mark_choice">记住我的选择</string>
    <string name="no_found">抱歉，未找到结果</string>
    <string name="error_line">路径规划异常</string>
    <string name="exist_app">再按一次退出程序</string>
    <string name="exist">确认要结束进程吗？</string>
    <string name="tip">提示</string>
    <string name="new_car">新增摇摇车</string>
    <string name="detail">详细</string>
    <string name="play_onemore">再玩一次</string>
    <string name="time_end">00 : 00</string>
    <string name="status_normal">正常</string>
    <string name="status_lock">无法开锁</string>
    <string name="status_break">故障</string>
    <string name="status_experting">维修中</string>
    <string name="carNo">编号</string>
    <string name="earn">收益</string>
    <string name="status">状态</string>
    <string name="date">日期</string>
    <string name="amount">金额</string>
    <string name="waiting">处理中</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="fail_submit">提交失败</string>
    <string name="edit_info">资料编辑</string>
    <string name="edit_info_success">您的资料修改已成功提交！</string>
    <string name="amout_num" formatted="false">%s元</string>
    <string name="earn_total" formatted="false">总收益：%.2f元</string>
    <string name="action_chart">统计图</string>
    <string name="action_detail">使用详情</string>
    <string name="action_preview">上个月</string>
    <string name="action_next">下个月</string>
    <string name="error_car_no">错误的车牌编号，请重试！</string>
    <string name="error_lock_failed">启动失败</string>
    <string name="error_lock_4000">摇摇车信息验证失败，请更换其他摇摇车使用！</string>
    <string name="error_lock_4001">错误的摇摇车编号，请重新扫码或输入编号！</string>
    <string name="error_lock_4002">摇摇车不可用或已断电，请更换其他摇摇车使用！</string>
    <string name="error_lock_4003">摇摇车启动超时，请稍后重试！</string>
    <string name="error_lock_401">appid错误！</string>
    <string name="error_lock_402">签名验证错误！</string>
    <string name="error_lock_403">机器号有误！</string>
    <string name="error_lock_404">机器不在线！</string>
    <string name="error_lock_405">机器正在使用中！</string>
    <string name="error_lock_406">响应超时！</string>
    <string name="earn_format" formatted="false">%.2f</string>
    <string name="balance_format" formatted="false">%.1f</string>
    <string name="submit">提交</string>
    <string name="type">类型</string>
    <string name="mark">备注</string>
    <string name="earn_detail">收益明细</string>
    <string name="apply_normal">设备正常</string>
    <string name="apply_expert">维修申报</string>
    <string name="tip_lock">该设备已申报无法开锁，建议更换设备使用</string>
    <string name="tip_break">该设备已申报故障，建议更换设备使用</string>
    <string name="charge_success">从%s成功充值：</string>
    <string name="pay_wechat">微信</string>
    <string name="pay_ali">支付宝</string>
    <string name="pay_order_fail">请求订单失败,请稍后重试！</string>
    <string name="pay_result_fail">获取订单结果失败,如有扣款异常请联系客服！</string>
    <string name="pay_fail">支付失败,如有扣款异常请联系客服！</string>
    <string name="pay_fail_8000">正在处理中，支付结果未知（有可能已经支付成功），请查询商户订单列表中订单的支付状态！</string>
    <string name="pay_fail_4000">订单支付失败！</string>
    <string name="pay_fail_5000">重复请求！</string>
    <string name="pay_fail_6004">支付结果未知（有可能已经支付成功），请查询商户订单列表中订单的支付状态！</string>
    <string name="pay_fail_6002">您已取消支付！</string>
    <string name="pay_fail_nopay">网络连接出错！</string>
    <string name="pay_success">恭喜，您已充值成功！</string>
    <string name="wallet_tip_1" formatted="false">点击马上充值，即表示已阅读和同意%s</string>
    <string name="wallet_tip_2">《充值协议》</string>
    <string name="about_us2">八客科技(深圳)有限公司</string>
    <string name="about_us">
        Copyright@2017
    </string>
    <string name="demo_title_location">demo_title_location</string>
    <string name="demo_desc_location">demo_desc_location</string>
    <string name="demo_title_geocode">demo_title_geocode</string>
    <string name="demo_desc_geocode">demo_desc_geocode</string>
    <string-array name="bmob_user_list">
        <item>1. 注册用户</item>
        <item>2. 登陆用户</item>
        <item>3. 获取本地用户</item>
        <item>4. 退出登陆</item>
        <item>5. 更新用户</item>
        <item>6. 重置密码</item>
        <item>7. 验证旧密码</item>
        <item>8. 验证邮件</item>
        <item>9. 查询用户</item>
        <item>10.通过邮箱和密码登陆</item>
        <item>11.通过手机号码和密码登陆</item>
        <item>12.通过手机号码和短信验证码登陆</item>
        <item>13.手机号码一键注册登录</item>
        <item>14.通过手机验证码重置密码</item>
        <item>15.修改当前用户密码</item>
    </string-array>
    <string name="firstname_apply">名字</string>
    <string name="lastname_apply">姓氏</string>
    <string name="account_register">注册</string>
    <string name="account_login">登录</string>
    <string name="account_login_facebook">Facebook</string>
    <string name="account_login_twitter">Twitter</string>
    <string name="account_forget_password">忘记密码</string>
    <string name="account_or_login_by">或</string>
    <string name="account_profile">个人资料</string>
    <string name="account_already_have">已有账户</string>
    <string name="account_sign_in">登录</string>
    <string name="account_change_password">修改密码</string>
    <string name="account_logout">登出</string>
    <string name="account_my_account">我的账户</string>
    <string name="account_submit">提交</string>
    <string name="account_passwords_different">两次密码输入不一致！</string>
    <string name="account_old_password">旧密码</string>
    <string name="account_new_password">新密码</string>
    <string name="account_confirm_new_password">确认密码</string>
    <string name="nearby_share">分享</string>
    <string name="account_tip_email">请输入邮箱</string>
    <string name="account_tip_password">请输入密码</string>
    <string name="account_tip_name">请输入姓名！</string>
    <string name="account_tip_first_name">请输入名字！</string>
    <string name="account_tip_last_name">请输入姓氏！</string>
    <string name="account_tip_login_info">请输入账号和密码 ！</string>
    <string name="account_tip_email_format">邮箱地址有误</string>
    <string name="account_tip_pwd_length">密码不能少于6位多于16位</string>
    <string name="account_tip_firstname_length">名字长度不能长于20位</string>
    <string name="account_tip_lastname_length">姓氏长度不能长于20位</string>
    <string name="account_hint_email">邮箱</string>
    <string name="account_hint_name">姓名</string>
    <string name="account_hint_phone">手机</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="apply_name_hint">真实姓名</string>
    <string name="apply_tip_name">商户提现需要填写真实姓名</string>
    <string name="apply_tip_email">邮箱非必填,可用于找回密码</string>
    <string name="apply_tip_address">请正确填写设备运送目的地</string>
    <string name="address">地址</string>
    <string name="about">关于我们</string>
    <string name="map_common">普通地图</string>
    <string name="map_site">卫星地图</string>
    <string name="map_traffic">实时交通(off)</string>
    <string name="map_mlocation">我的位置</string>
    <string name="map_common_model">普通模式</string>
    <string name="map_follow">跟随模式</string>
    <string name="map_luo">罗盘模式</string>
    <string name="input_limit">0/200</string>
    <string name="input_title">请描述现象并提交，我们会尽快处理！</string>
    <string name="break_content1">车子太脏</string>
    <string name="break_content2">二维码失效</string>
    <string name="break_content3">外壳损坏</string>
    <string name="break_content4">视频问题</string>
    <string name="break_content5">灯光问题</string>
    <string name="break_content6">屏幕损坏</string>
    <string name="break_content7">声音问题</string>
    <string name="break_content8">其他</string>
    <string name="break_lock1">1.App提示本车故障，请换其他摇摇车。当前提示下，该车可能处于故障中，正在等待维修人员
    前往维修，请使用其他摇摇车。</string>
    <string name="break_lock2">2.多次尝试仍开锁失败，请描述现象并提交，yoyoo会因为您的关怀会越来越好。</string>
    <string name="break_hint">请输入问题描述，非常感谢您的反馈。</string>
    <string name="bankcard_title">账户编辑</string>
    <string name="bankcard_no_notice">注意：编辑银行账号信息时，请务必确认该银行账户持有人姓名和预留电话与注册商户的真实姓名和电话保持一致！</string>
    <string name="bank_name_hint">请输入银行名称</string>
    <string name="bank_num_hint">请输入银行账号</string>
    <string name="feedback">反馈</string>
    <string name="feedback_title1">联系</string>
    <string name="feedback_hint_email">"@example.com"</string>
    <string name="feedback_title2">详情</string>
    <string name="feedback_hint_detail">
        Tips: \n
        1.设备、开锁、扣费等异常，请把编号发给我们 \n
        2.有更好的建议，请反馈给我们</string>
    <string name="pref_generalsettings_key">general_settings_key</string>
    <string name="pref_generalsettings_title">通用设置</string>
    <string name="pref_check_update_key">check_update_preference</string>
    <string name="pref_check_update_title">检测更新</string>
    <string name="pref_otherssettings_key">others_settings_key</string>
    <string name="pref_otherssettings_title">其他</string>
    <string name="pref_about_us_key">about_us_preference</string>
    <string name="pref_feed_back_key">feed_back_preference</string>
</resources>