<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    <!--<PreferenceCategory
        android:key="@string/pref_downloadsettings_key"
        android:title="@string/pref_downloadsettings_title">

    </PreferenceCategory>-->

    <PreferenceCategory
        android:key="@string/pref_generalsettings_key"
        android:title="@string/pref_generalsettings_title">

        <com.systemteam.view.PreferenceWithTip
            android:key="@string/pref_check_update_key"
            android:persistent="false"
            android:title="@string/pref_check_update_title"
            android:widgetLayout="@layout/preference_widget_image" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_otherssettings_key"
        android:title="@string/pref_otherssettings_title">

        <Preference
            android:key="@string/pref_about_us_key"
            android:title="@string/about"></Preference>

        <Preference
            android:key="@string/pref_feed_back_key"
            android:title="@string/feedback"></Preference>
    </PreferenceCategory>

</PreferenceScreen>
