<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.systemteam.MainActivity">
    <item
        android:id="@+id/id_map_common"
        android:title="@string/map_common"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_map_site"
        android:title="@string/map_site"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_map_traffic"
        android:title="@string/map_traffic"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_map_mlocation"
        android:title="@string/map_mlocation"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_map_model_common"
        android:title="@string/map_common_model"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_map_model_following"
        android:title="@string/map_follow"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_map_model_compass"
        android:title="@string/map_luo"
        app:showAsAction="never" />

</menu>
