<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.systemteam.view.IconEditTextView
        android:layout_marginTop="10dp"
        android:id="@+id/iet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:edtHint="@string/apply_name_hint"
        app:maxLength="100"
        app:edtIcon="@drawable/ic_name_blue_24dp"/>
    <TextView
        android:id="@+id/tv_name_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="@color/text_black_30"
        android:textSize="12sp"
        android:text="@string/apply_tip_name"/>
    <com.systemteam.view.IconEditTextView
        android:id="@+id/iet_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:edtHint="@string/account_hint_phone"
        app:maxLength="100"
        app:enable="false"
        app:edtIcon="@drawable/ic_phone_blue_24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="@color/text_black_30"
        android:visibility="gone"
        android:textSize="12sp"
        android:text="@string/apply_tip_name"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp">
        <RadioButton
            android:id="@+id/rb_man"
            style="@style/CustomRadioTheme"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:checked="true"
            android:textColor="@color/text_black_87"
            android:textSize="16sp"
            android:text="@string/man"/>
        <RadioButton
            android:id="@+id/rb_woman"
            style="@style/CustomRadioTheme"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/text_black_87"
            android:text="@string/woman"/>
    </RadioGroup>
</LinearLayout>