<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_343333"
        android:visibility="visible"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@mipmap/return_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bankcard_title"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f4f3f3"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="top"
        android:layout_below="@+id/title_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.systemteam.view.IconEditTextView
            android:layout_marginTop="10dp"
            android:id="@+id/iet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:edtHint="@string/account_hint_name"
            app:maxLength="100"
            app:edtIcon="@drawable/ic_name_blue_24dp"/>
        <com.systemteam.view.IconEditTextView
            android:layout_marginTop="10dp"
            android:id="@+id/iet_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:edtHint="@string/account_hint_phone"
            app:maxLength="100"
            app:enable="false"
            android:clickable="false"
            app:edtIcon="@drawable/ic_phone_blue_24dp"/>
        <com.systemteam.view.IconEditTextView
            android:layout_marginTop="10dp"
            android:id="@+id/iet_cardname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:edtHint="@string/bank_name_hint"
            app:maxLength="100"
            app:edtIcon="@drawable/ic_mail_blue_24dp"/>

        <com.systemteam.view.IconEditTextView
            android:layout_marginTop="10dp"
            android:id="@+id/iet_cardnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:edtHint="@string/bank_num_hint"
            app:maxLength="100"
            app:isNumeric="true"
            app:edtIcon="@drawable/ic_price_blue_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/bankcard_no_notice"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_unlock"
            style="@style/button_style"
            android:text="@string/confirm"/>
    </LinearLayout>
</RelativeLayout>