<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_base_bg_gray">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
        <TextView
            android:id="@+id/toolbar_title"
            style="@style/toolbar_title" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <include layout="@layout/layout_experter_info_avatar"/>

            <include layout="@layout/layout_info_edit"/>

            <com.systemteam.view.IconEditTextView
                android:layout_marginTop="10dp"
                android:id="@+id/iet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:edtHint="@string/account_hint_email"
                app:maxLength="100"
                app:edtIcon="@drawable/ic_mail_blue_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/text_black_30"
                android:textSize="12sp"
                android:text="@string/apply_tip_email"/>
            <com.systemteam.view.IconEditTextView
                android:layout_marginTop="10dp"
                android:id="@+id/iet_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:edtHint="@string/address"
                app:maxLength="100"
                app:edtIcon="@drawable/ic_country_blue_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/text_black_30"
                android:textSize="12sp"
                android:text="@string/apply_tip_address"/>

            <Button
                style="@style/button_style"
                android:text="@string/account_submit"
                android:onClick="doApply" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>