<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/activity_base_bg"
    tools:context="com.systemteam.activity.BreakActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
        <TextView
            android:id="@+id/toolbar_title"
            style="@style/toolbar_title" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/layout_title_scan"/>

            <include layout="@layout/layout_break"/>
            <LinearLayout
                android:id="@+id/ll_lock"
                style="@style/info_layout_style"
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textColor="@color/text_black_87"
                    android:text="@string/break_lock1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textColor="@color/text_black_87"
                    android:text="@string/break_lock2"/>
            </LinearLayout>
            <RelativeLayout
                style="@style/info_layout_style"
                android:padding="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="@dimen/text_size_12"
                    android:textColor="@color/text_black_87"
                    android:text="@string/input_title" />
                <EditText
                    android:id="@+id/et_description"
                    style="@style/code_edit_style"
                    android:gravity="top|left"
                    android:textSize="@dimen/text_size_14"
                    android:inputType="text"
                    android:layout_height="120dp"
                    android:layout_width="match_parent"
                    android:layout_below="@id/tv_title"
                    android:hint="@string/break_hint"
                    android:windowSoftInputMode="stateVisible" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:textColor="@color/text_black_87"
                    android:text="@string/input_limit"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_submit"
                style="@style/button_style"
                android:text="@string/confirm"
                android:onClick="doBreakSubmit" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
